--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_API=http://localhost:4000
+REACT_APP_API=http://tunnelx-env.wwctebqqn9.eu-central-1.elasticbeanstalk.com
 REACT_APP_SECRET_CODE2=prod456
